--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,29 @@
-Django==3.2.16
-pep8-naming==0.13.3
-pytest==7.1.3
-pytest-django==4.5.2
-pytest-pythonpath==0.7.3
-flake8==5.0.4
-flake8-docstrings==1.7.0
+annotated-types==0.7.0
+anyio==4.10.0
+attrs==25.4.0
+certifi==2025.10.5
+charset-normalizer==3.4.4
+click==8.2.1
+colorama==0.4.6
+exceptiongroup==1.3.0
+fastapi==0.116.1
+h11==0.16.0
+idna==3.10
+iniconfig==2.3.0
+mccabe==0.7.0
+packaging==25.0
+pluggy==1.6.0
+py==1.11.0
+pydantic==2.11.9
+pydantic_core==2.33.2
+pydocstyle==6.3.0
+pyflakes==2.5.0
+requests==2.32.5
+sniffio==1.3.1
+snowballstemmer==3.0.1
+starlette==0.47.3
+tomli==2.3.0
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+urllib3==2.5.0
+uvicorn==0.35.0
